Ajout des propriétées css pour la div .activites-cards pour mettre le contenue en colonne en fixant la hauteur à 439px avec hauteur et 297.5px pour la largeur avec overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -351,6 +351,15 @@ a {
     flex-direction: column;
     gap: 30px;
     padding: 30px;
+    margin-top: 35px;
+}
+
+.activites .activites-cards {
+    display: flex;
+    flex-direction: column;
+    height: 439px;
+    width: auto;
+    overflow: hidden;
 }
 
 
